--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mūsų Meilės Istorija</title>
+  <title>Our Love Story</title>
   <style>
     /* --- Basic Reset & Body Styles --- */
     * {
@@ -162,7 +162,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <h1>Su Šv. Valentinu Meile!</h1>
-    <p>Paruošiau tau šį mūsų istorijos laiko žemėlapį</p>
+    <p>Paruošiau tau šį trumpą mūsų istorijos laiko žemėlapį</p>
   </section>
 
   <!-- Timeline Section -->
@@ -189,6 +189,17 @@
         <p>
            Čia mūsų santykiai įgavo oficialų "statusą" su klausimu "Ar būsi mano mergina?"<br/>
            <strong>Ji pasakė taip!</strong>
+        </p>
+      </div>
+    </div>
+
+    <div class="timeline-item" data-animate>
+      <div class="timeline-content">
+        <img src="/images/riga.jpg" alt="Second2 memory photo" />
+        <h3>Pirmoji kelionė</h3>
+        <p>
+            Mūsų pats pirmas didesnis spontaniškas sprendimas, kuris įrodė, kad abu turime tokią man svarbią savybę<br/>
+           Neįitikėtinas Savaitgalis!
         </p>
       </div>
     </div>
